RESOLVED FIXED217636
JIT operations do not need extern "C"
https://bugs.webkit.org/show_bug.cgi?id=217636
Summary JIT operations do not need extern "C"
Yusuke Suzuki
Reported 2020-10-12 14:52:22 PDT
JIT operations do not need extern "C"
Attachments
Patch (13.64 KB, patch)
2020-10-12 14:53 PDT, Yusuke Suzuki
no flags
Patch (13.14 KB, patch)
2020-10-12 14:55 PDT, Yusuke Suzuki
ews-feeder: commit-queue-
Patch for landing (13.14 KB, patch)
2020-10-12 15:01 PDT, Yusuke Suzuki
ews-feeder: commit-queue-
Patch for landing (13.22 KB, patch)
2020-10-12 15:40 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2020-10-12 14:53:30 PDT
Yusuke Suzuki
Comment 2 2020-10-12 14:55:06 PDT
Yusuke Suzuki
Comment 3 2020-10-12 14:57:28 PDT
Comment on attachment 411164 [details] Patch Oops, cleared Saam's r+ with the uploaded patch. But uploaded patch is just adding "// extern "C"" to MathCommons.cpp which original exists. So, I'll land this.
Yusuke Suzuki
Comment 4 2020-10-12 15:01:33 PDT
Created attachment 411166 [details] Patch for landing
Yusuke Suzuki
Comment 5 2020-10-12 15:40:59 PDT
Created attachment 411175 [details] Patch for landing
Yusuke Suzuki
Comment 6 2020-10-12 21:53:01 PDT
Radar WebKit Bug Importer
Comment 7 2020-10-12 21:53:17 PDT
Note You need to log in before you can comment on or make changes to this bug.