JIT operations do not need extern "C" https://bugs.webkit.org/show_bug.cgi?id=217636

Reviewed by Saam Barati.

Source/JavaScriptCore:

Since they are directly embedded by JIT code generator (not linked via linker), they do not need to be C linkage.

* dfg/DFGOperations.cpp:
* dfg/DFGOperations.h:
* ftl/FTLOSRExitCompiler.cpp:
* ftl/FTLOSRExitCompiler.h:
* ftl/FTLOperations.cpp:
* ftl/FTLOperations.h:
* jit/JITOperations.cpp:
* jit/JITOperations.h:

Source/WebCore:

* domjit/DOMJITHelpers.h:
* domjit/JSDocumentDOMJIT.cpp:

Canonical link: https://commits.webkit.org/230394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268385 268f45cc-cd09-0410-ab3c-d52691b4dbfc